--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,14 @@
     <link rel="apple-touch-icon" href="./favicon_io/apple-touch-icon.png" />
     <link rel="shortcut icon" href="./favicon_io/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>MohitSojitra | Portfolio</title>
+    <title>VaibhavShinde | Portfolio</title>
     <meta
       name="description"
       content="Self Developed personal website build with React.js"
     />
 
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="Mohit Sojitra | Portfolio" />
+    <meta itemprop="name" content="Vaibhav Shinde | Portfolio" />
     <meta
       itemprop="description"
       content="Self Developed personal website build with React.js"
